добавлено minio, метод скачивания файла
