# src/main/kotlin/ru/taynov/share/dto/DownloadFileRequest.kt
@@ -1,0 +1,5 @@
+package ru.taynov.share.dto
+
+data class DownloadFileRequest (
+    val password: String?
+)
